# Lite3_rl_deploy

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakeLists_backup.txt  README.md  README_EN.md  RELEASE_GUIDE.md  main.cpp  tree.txt
Lite3_description/lite3_mjcf/: test.py
Lite3_description/lite3_mjcf/meshes/: 04.stl  06.stl  08.stl  09.stl  100.stl  1000.stl  1002.stl  1003.stl  1004.stl  1005.stl  1006.stl  1010.stl  1012.stl  1018.stl  1023.stl  1026.stl  103.stl  1036.stl  1037.stl  1038.stl  1041.stl  1042.stl  1043.stl  1044.stl  1048.stl  1050.stl  1051.stl  1052.stl  1053.stl  1055.stl  106.stl  1063.stl  1067.stl  1068.stl  1078.stl  1079.stl  1082.stl  1085.stl  1086.stl  1090.stl  (+1028 more)
Lite3_description/lite3_mjcf/mjcf/: Lite3_stair.xml  M20.xml  scene.xml  stair.xml
Lite3_description/model/meshes/: 01.stl  02.stl  03.stl  05.stl  07.stl  10.stl  1001.stl  1007.stl  1008.stl  1009.stl  101.stl  1011.stl  1013.stl  1014.stl  1015.stl  1016.stl  1017.stl  1019.stl  102.stl  1020.stl  1021.stl  1022.stl  1024.stl  1025.stl  1027.stl  1028.stl  1029.stl  1030.stl  1031.stl  1032.stl  1033.stl  1034.stl  1035.stl  1039.stl  104.stl  1040.stl  1045.stl  1046.stl  1047.stl  1049.stl  (+1077 more)
Lite3_description/model/mjcf/: base.xml  scene.xml
interface/: CMakeLists.txt  test.cpp
interface/robot/: robot_interface.h
interface/robot/hardware/: hardware_interface.hpp  lite3_hardware_interface.hpp
interface/robot/simulation/: MUJOCO_LOG.TXT  forward_kinematic.py  interpolation.py  kalman_filter.py  mujoco_interface.hpp  mujoco_simulation.py  pybullet_interface.hpp  pybullet_simulation.py  raisim_interface.hpp  simulation_interface.hpp
interface/user_command/: keyboard_interface.hpp  retroid_gamepad_interface.hpp  skydroid_gamepad_interface.hpp  user_command_interface.h
lite3_api/: CMakeLists.txt
lite3_api/examples/: simple_example.cpp
lite3_api/include/: lite3_controller.hpp
lite3_api/python/: python_bindings.cpp
lite3_api/src/: lite3_controller.cpp
lite3_api/tests/: test_controller.cpp
policy/: pt2onnx.py  pt2onnx_him.py
policy/Himloco/: policy_6_10.onnx  policy_6_11.onnx  policy_6_12.onnx  policy_6_6.onnx  policy_6_9.onnx
policy/ppo/: policy.onnx
python_package/: README.md  setup.py
python_package/examples/: 01_basic_control.py  02_custom_policy.py  03_pytorch_policy.py  04_gym_training.py  05_data_logging.py  06_benchmark.py  lite3_data.csv
python_package/pylite3/: __init__.py  gym_env.py  utils.py
python_package/pylite3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_package/tests/: test_api.py
run_policy/: lite3_himloco_policy_runner_onnx.hpp  lite3_test_policy_runner.hpp  lite3_test_policy_runner_onnx.cpp  lite3_test_policy_runner_onnx.h  lite3_test_policy_runner_onnx.hpp  policy_runner_base.hpp  test.cpp
scripts/: scp_onnx_to_remote.sh  scp_torch_to_remote.sh  sftp_to_remote.sh
state_machine/: force_stand_state.hpp  idle_state.hpp  joint_damping_state.hpp  rl_control_state.hpp  rl_control_state_onnx.hpp  standup_state.hpp  state_base.h  state_machine.hpp
state_machine/parameters/: control_parameters.h  lite3_control_parameters.cpp
types/: common_types.h  custom_types.h
utils/: basic_function.hpp  convert_urdf_to_mjcf.py  data_streaming.hpp
